<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/table_id"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/did"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/table_partenza"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dpart"
        android:layout_above="@+id/textView5"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/table_destinazione"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <TextView
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dkm"
        android:layout_below="@+id/textView6"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/ddest"
        android:layout_above="@+id/dnumfossi"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/table_numfossi"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dnumfossi"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/table_km"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:id="@+id/textView8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Commenta"
        android:id="@+id/buttonFeedback"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/dkm"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vedi Commenti"
        android:id="@+id/buttonReadFeedback"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/buttonFeedback"
        android:layout_centerHorizontal="true" />
</RelativeLayout>